update swagger api docs.
