# app/govern/api/staff.go
@@ -12,17 +12,38 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
+// GetPicCaptcha
+// @description Get a new picture captcha id and base64 string of the picture, and delete the obsolete captcha of the obsolete_id, if has.
+// @id get-pic-captcha
+// @tags staff
+// @summary Get a picture captcha.
+// @produce json
+// @param obsolete_id query string false "an obsolete captcha id."
+// @success 2000 {object} bll.GetPicCaptchaResp "captcha id and picture."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /picCaptcha [GET]
 func (a *Staff) GetPicCaptcha(c *gin.Context) {
 	ctx := c.Request.Context()
 	resp, err := a.bll.GeneratePicCaptchaIdAndB64s(ctx, c.Query("obsolete_id"))
 	if err != nil {
-		ginx.JSONWithFailure(c, nil)
+		ginx.JSONWithFailure(c, err)
 		return
 	}
 	ginx.JSONWithSuccess(c, resp)
 	return
 }
 
+// GetPicCaptchaAnswer
+// @description Get the answer code of a picture captcha with the captcha id.
+// @id get-pic-captcha-answer
+// @tags staff
+// @summary Get the answer code of a picture captcha.
+// @produce json
+// @param id query string true "a captcha id."
+// @security ApiKeyAuth
+// @success 2000 {string} string "captcha answer code"
+// @failure 1000 {error} error "Invalid Token, Invalid Captcha, Unauthorized, or other errors."
+// @router /picCaptchaAnswer [GET]
 func (a *Staff) GetPicCaptchaAnswer(c *gin.Context) {
 	ctx := c.Request.Context()
 	sessionId := ginx.SessionIdFromGinX(c)
@@ -30,7 +51,7 @@ func (a *Staff) GetPicCaptchaAnswer(c *gin.Context) {
 		ginx.JSONWithUnauthorized(c, schema.ErrUnauthorized.Error())
 		return
 	}
-	answer := a.bll.GetPicCaptchaAnswer(ctx, c.Param("id"))
+	answer := a.bll.GetPicCaptchaAnswer(ctx, c.Query("id"))
 	if answer == "" {
 		ginx.JSONWithInvalidCaptcha(c, schema.ErrInvalidCaptcha.Error())
 		return
@@ -39,9 +60,20 @@ func (a *Staff) GetPicCaptchaAnswer(c *gin.Context) {
 	return
 }
 
+// SignIn
+// @description Sign in with account and password, supporting picture captcha authentication.
+// @id sign-in
+// @tags staff
+// @summary Sign in.
+// @accept json
+// @produce json
+// @param body body bll.SignInReq true "required attributes to sign in."
+// @success 2000 {object} bll.SignInResp "sign in token and expiry time."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /signIn [PATCH]
 func (a *Staff) SignIn(c *gin.Context) {
 	ctx := c.Request.Context()
-	var arg bll.SigninReq
+	var arg bll.SignInReq
 	if err := c.ShouldBindBodyWith(&arg, binding.JSON); err != nil {
 		ginx.JSONWithInvalidArguments(c, err.Error())
 		return
@@ -79,6 +111,16 @@ func (a *Staff) SignIn(c *gin.Context) {
 	return
 }
 
+// SignOut
+// @description Sign out the session account.
+// @id sign-out
+// @tags staff
+// @summary Sign out.
+// @produce json
+// @security ApiKeyAuth
+// @success 2000 {null} null "successful action."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /signOut [PATCH]
 func (a *Staff) SignOut(c *gin.Context) {
 	ctx := c.Request.Context()
 	sessionId := ginx.SessionIdFromGinX(c)
@@ -90,9 +132,20 @@ func (a *Staff) SignOut(c *gin.Context) {
 	return
 }
 
+// SignUp
+// @description Sign up a new staff account.
+// @id sign-up
+// @tags staff
+// @summary Sign up.
+// @accept json
+// @produce json
+// @param body body bll.SignUpReq true "required attributes to sign up."
+// @success 2000 {null} null "successful action."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /signUp [POST]
 func (a *Staff) SignUp(c *gin.Context) {
 	ctx := c.Request.Context()
-	var arg bll.SignupReq
+	var arg bll.SignUpReq
 	if err := c.ShouldBindBodyWith(&arg, binding.JSON); err != nil {
 		ginx.JSONWithInvalidArguments(c, err.Error())
 		return
@@ -105,6 +158,17 @@ func (a *Staff) SignUp(c *gin.Context) {
 	return
 }
 
+// SignOff
+// @description Sign off the session account, or some specific account only by root account.
+// @id sign-off
+// @tags staff
+// @summary Sign off.
+// @produce json
+// @param id path string true "id of the account to sign off."
+// @security ApiKeyAuth
+// @success 2000 {null} null "successful action."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /signOff/:id [DELETE]
 func (a *Staff) SignOff(c *gin.Context) {
 	ctx := c.Request.Context()
 	objId, err := primitive.ObjectIDFromHex(c.Param("id"))
@@ -126,6 +190,19 @@ func (a *Staff) SignOff(c *gin.Context) {
 	return
 }
 
+// Update
+// @description Update all updatable attributes of a staff account.
+// @id staff-update
+// @tags staff
+// @summary Update attributes of a staff.
+// @accept json
+// @produce json
+// @param id path string true "id of the staff account to update."
+// @param body body bll.StaffUpdateReq true "attributes to update."
+// @security ApiKeyAuth
+// @success 2000 {null} null "successful action."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /staff/:id [PUT]
 func (a *Staff) Update(c *gin.Context) {
 	ctx := c.Request.Context()
 	objId, err := primitive.ObjectIDFromHex(c.Param("id"))
@@ -151,6 +228,17 @@ func (a *Staff) Update(c *gin.Context) {
 	return
 }
 
+// Profile
+// @description Get the profile of a staff account.
+// @id staff-profile
+// @tags staff
+// @summary Get infos of a staff account.
+// @produce json
+// @param id path string true "id of the staff account."
+// @security ApiKeyAuth
+// @success 2000 {object} bll.ProfileResp "profile of the staff."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /staff/:id [GET]
 func (a *Staff) Profile(c *gin.Context) {
 	ctx := c.Request.Context()
 	objId, err := primitive.ObjectIDFromHex(c.Param("id"))
@@ -167,6 +255,17 @@ func (a *Staff) Profile(c *gin.Context) {
 	return
 }
 
+// List
+// @description Get a list of staff accounts.
+// @id staff-list
+// @tags staff
+// @summary Get a list of staff accounts.
+// @product json
+// @param query query bll.StaffListReq false "search criteria."
+// @security ApiKeyAuth
+// @success 2000 {object} bll.StaffListResp "staff list."
+// @failure 1000 {error} error "feasible and predictable errors."
+// @router /staff [GET]
 func (a *Staff) List(c *gin.Context) {
 	ctx := c.Request.Context()
 	var arg bll.StaffListReq
